# lonelybot

./: README.md
lonecli/: Cargo.toml
lonecli/src/: main.rs  training.rs
python/: example_state.json  klondike_env.py  main.py  policy_value_net.py  utils.py
python/lonelybot_py/: Cargo.toml  __init__.py  pyproject.toml
python/lonelybot_py/lonelybot_py/: __init__.py  lonelybot_py.cp312-win_amd64.pyd
python/lonelybot_py/src/: lib.rs
src/: analysis.rs  card.rs  deck.rs  game_theory.rs  lib.rs  partial.rs  state.rs
tests/: partial.rs  style_coef.rs
