[package]
name = "lonelybot_py"
version = "0.1.0"
edition = "2021"

[lib]
name = "lonelybot_py"
crate-type = ["cdylib"]

[dependencies]
lonelybot = { path = "../.." }
pyo3 = { version = "0.21", features = ["extension-module"] }
rand = { version = "0.9.0", default-features = false, features = ["small_rng"] }
serde_json = "1"

[workspace]

