[package]
name = "lonelybot_py"
version = "0.1.0"
edition = "2021"

[lib]
name = "lonelybot_py"
crate-type = ["cdylib"]

[dependencies]
lonelybot = { path = "../.." }
pyo3 = { version = "=0.20.2", features = ["extension-module"] }
numpy = "=0.20.0"
ndarray = "0.15.6"
rand = { version = "0.9.0", default-features = false, features = ["small_rng"] }
serde_json = "1"
lonecli = { path = "../../lonecli" }

[workspace]
